Fix overflow and rogue images

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,6 @@ html {
 body {
   background-color: #011627;
   color: #FDFFFC;
-  overflow-x: hidden!important;
   width: 100%;
   -webkit-font-smoothing: antialiased;
 }
@@ -24,7 +23,7 @@ h1 {
 h2 {
   font-size: 3.4rem;
   font-family: "montserrat", sans-serif;
-  letter-spacing: .3rem;
+  letter-spacing: .2rem;
   line-height: 4.2rem;
 }
 
@@ -39,6 +38,7 @@ h4 {
   font-size: 2rem;
   font-family: "montserrat", sans-serif;
   font-weight: lighter;
+  line-height: 2.8rem;
 }
 
 h5 {
@@ -81,22 +81,6 @@ p, a, li {
   align-items: center;
 }
 
-.fullscrn {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 90vh;
-  margin: auto 2rem;
-}
-
-.halfscrn {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 40rem;
-  margin: auto 2rem;
-}
-
 .long-section {
   display: flex;
   flex-direction: column;
@@ -136,12 +120,9 @@ p, a, li {
   margin: 10rem auto;
 }
 
-.halfscrntop {
-  margin-top: 40rem;
-}
-
-.halfscrnbot {
-  margin-bottom: 50vh;
+.sidemarg {
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 /* Bounce animation for icons*/
@@ -170,6 +151,7 @@ header {
 
 .container {
   position: relative;
+  overflow-x: hidden;
 }
 
 .my-logo {
@@ -399,7 +381,6 @@ input[type=radio] {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 3rem 1rem;
   height: 100vh;
   width: 100%;
 }
@@ -660,7 +641,7 @@ input[type=radio] {
   overflow: hidden;
   height: auto;
   width: 100%;
-  max-height: 100%;
+  height: 100%;
   max-width: 100rem;
 }
 
